<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/SS_Text"
        android:layout_width="232dp"
        android:layout_height="76dp"
        android:text="@string/title"
        android:textSize="45sp"
        app:layout_constraintBottom_toTopOf="@+id/signin_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Login_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_Btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.709" />

    <EditText
        android:id="@+id/signin_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:autoText="false"
        android:ems="10"
        android:hint="@string/login_email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/signin_pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/signin_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/login_pass_hint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/Login_Btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.896" />

    <TextView
        android:id="@+id/FP_text"
        android:layout_width="155dp"
        android:layout_height="44dp"
        android:clickable="false"
        android:text="@string/forgotPW_click_text"
        android:textColor="#2155F3"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login_Btn"
        app:layout_constraintVertical_bias="0.533" />

    <TextView
        android:id="@+id/signup_text"
        android:layout_width="86dp"
        android:layout_height="43dp"
        android:clickable="false"
        android:text="@string/signup_click_text"
        android:textColor="#2136F3"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/FP_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login_Btn"
        app:layout_constraintVertical_bias="0.631" />
</androidx.constraintlayout.widget.ConstraintLayout>